LnParser2.cpp
/*
** Copyright (C) 2024 Rochus Keller (me@rochus-keller.ch)
**
** This file is part of the Luon language project.
**
**
** GNU Lesser General Public License Usage
** This file may be used under the terms of the GNU Lesser
** General Public License version 2.1 or version 3 as published by the Free
** Software Foundation and appearing in the file LICENSE.LGPLv21 and
** LICENSE.LGPLv3 included in the packaging of this file. Please review the
** following information to ensure the GNU Lesser General Public License
** requirements will be met: https://www.gnu.org/licenses/lgpl.html and
** http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html.
*/

#include "LnParser2.h"
#include <QtDebug>
using namespace Ln;

static const quint64 maxUlong = ((quint64)1 << BasicType::SignedIntBitWidth) - 1; // 52 bits

static inline bool FIRST_Luon(int tt) {
	return tt == Tok_MODULE;
}

static inline bool FIRST_number(int tt) {
	return tt == Tok_integer || tt == Tok_real;
}

static inline bool FIRST_qualident(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_identdef(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_ConstDeclaration(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_ConstExpression(int tt) {
	switch(tt){
	case Tok_hexstring:
	case Tok_NOT:
	case Tok_Tilde:
	case Tok_NIL:
	case Tok_Lbrace:
	case Tok_ident:
	case Tok_TRUE:
	case Tok_hexchar:
	case Tok_integer:
	case Tok_Plus:
	case Tok_string:
	case Tok_real:
	case Tok_FALSE:
	case Tok_Lpar:
	case Tok_Minus:
		return true;
	default: return false;
	}
}

static inline bool FIRST_TypeDeclaration(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_type(int tt) {
	switch(tt){
	case Tok_PROC:
	case Tok_RECORD:
	case Tok_HASHMAP:
	case Tok_ident:
	case Tok_ARRAY:
	case Tok_PROCEDURE:
	case Tok_Lbrack:
	case Tok_Lpar:
		return true;
	default: return false;
	}
}

static inline bool FIRST_NamedType(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_ArrayType(int tt) {
	return tt == Tok_ARRAY || tt == Tok_Lbrack;
}

static inline bool FIRST_length(int tt) {
	switch(tt){
	case Tok_hexstring:
	case Tok_NOT:
	case Tok_Tilde:
	case Tok_NIL:
	case Tok_Lbrace:
	case Tok_ident:
	case Tok_TRUE:
	case Tok_hexchar:
	case Tok_integer:
	case Tok_Plus:
	case Tok_string:
	case Tok_real:
	case Tok_FALSE:
	case Tok_Lpar:
	case Tok_Minus:
		return true;
	default: return false;
	}
}

static inline bool FIRST_DictType(int tt) {
	return tt == Tok_HASHMAP;
}

static inline bool FIRST_RecordType(int tt) {
	return tt == Tok_RECORD;
}

static inline bool FIRST_BaseType(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_FieldList(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_IdentList(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_enumeration(int tt) {
	return tt == Tok_Lpar;
}

static inline bool FIRST_constEnum(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_VariableDeclaration(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_designator(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_selector(int tt) {
	return tt == Tok_Lpar || tt == Tok_Lbrack || tt == Tok_Dot;
}

static inline bool FIRST_ExpList(int tt) {
	switch(tt){
	case Tok_hexstring:
	case Tok_NOT:
	case Tok_Tilde:
	case Tok_NIL:
	case Tok_Lbrace:
	case Tok_ident:
	case Tok_TRUE:
	case Tok_hexchar:
	case Tok_Plus:
	case Tok_integer:
	case Tok_string:
	case Tok_real:
	case Tok_FALSE:
	case Tok_Lpar:
	case Tok_Minus:
		return true;
	default: return false;
	}
}

static inline bool FIRST_expression(int tt) {
	switch(tt){
	case Tok_hexstring:
	case Tok_NOT:
	case Tok_Tilde:
	case Tok_NIL:
	case Tok_Lbrace:
	case Tok_ident:
	case Tok_TRUE:
	case Tok_hexchar:
	case Tok_integer:
	case Tok_Plus:
	case Tok_string:
	case Tok_real:
	case Tok_FALSE:
	case Tok_Lpar:
	case Tok_Minus:
		return true;
	default: return false;
	}
}

static inline bool FIRST_relation(int tt) {
	switch(tt){
	case Tok_Lt:
	case Tok_Eq:
	case Tok_Gt:
	case Tok_Leq:
	case Tok_IS:
	case Tok_Hash:
	case Tok_IN:
	case Tok_Geq:
		return true;
	default: return false;
	}
}

static inline bool FIRST_SimpleExpression(int tt) {
	switch(tt){
	case Tok_hexstring:
	case Tok_NOT:
	case Tok_Tilde:
	case Tok_NIL:
	case Tok_Lbrace:
	case Tok_ident:
	case Tok_TRUE:
	case Tok_hexchar:
	case Tok_Plus:
	case Tok_integer:
	case Tok_string:
	case Tok_real:
	case Tok_FALSE:
	case Tok_Lpar:
	case Tok_Minus:
		return true;
	default: return false;
	}
}

static inline bool FIRST_AddOperator(int tt) {
	return tt == Tok_OR || tt == Tok_Plus || tt == Tok_Minus;
}

static inline bool FIRST_term(int tt) {
	switch(tt){
	case Tok_hexstring:
	case Tok_NOT:
	case Tok_Tilde:
	case Tok_NIL:
	case Tok_Lbrace:
	case Tok_ident:
	case Tok_TRUE:
	case Tok_hexchar:
	case Tok_integer:
	case Tok_string:
	case Tok_real:
	case Tok_FALSE:
	case Tok_Lpar:
		return true;
	default: return false;
	}
}

static inline bool FIRST_MulOperator(int tt) {
	switch(tt){
	case Tok_Star:
	case Tok_MOD:
	case Tok_AND:
	case Tok_Amp:
	case Tok_Slash:
	case Tok_DIV:
		return true;
	default: return false;
	}
}

static inline bool FIRST_literal(int tt) {
	switch(tt){
    case Tok_FALSE:
    case Tok_hexchar:
    case Tok_hexstring:
    case Tok_integer:
    case Tok_NIL:
    case Tok_real:
    case Tok_string:
    case Tok_TRUE:
		return true;
	default: return false;
	}
}

static inline bool FIRST_constructor(int tt) {
    return tt == Tok_Lbrace || tt == Tok_ident;
}

static inline bool FIRST_component(int tt) {
    switch(tt){
    case Tok_hexstring:
    case Tok_NOT:
    case Tok_Tilde:
    case Tok_NIL:
    case Tok_Lbrace:
    case Tok_ident:
    case Tok_TRUE:
    case Tok_hexchar:
    case Tok_integer:
    case Tok_Plus:
    case Tok_real:
    case Tok_FALSE:
    case Tok_string:
    case Tok_Lbrack:
    case Tok_Minus:
    case Tok_Lpar:
        return true;
    default: return false;
    }
}

static inline bool FIRST_factor(int tt) {
    switch(tt){
    case Tok_hexstring:
    case Tok_NOT:
    case Tok_Tilde:
    case Tok_NIL:
    case Tok_Lbrace:
    case Tok_ident:
    case Tok_TRUE:
    case Tok_hexchar:
    case Tok_integer:
    case Tok_real:
    case Tok_FALSE:
    case Tok_string:
    case Tok_Lpar:
        return true;
    default: return false;
    }
}

static inline bool FIRST_variableOrFunctionCall(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_statement(int tt) {
	switch(tt){
	case Tok_EXIT:
	case Tok_IF:
	case Tok_ident:
	case Tok_FOR:
	case Tok_LOOP:
	case Tok_WHILE:
	case Tok_RETURN:
	case Tok_CASE:
	case Tok_REPEAT:
		return true;
	default: return false;
	}
}

static inline bool FIRST_assignmentOrProcedureCall(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_StatementSequence(int tt) {
	switch(tt){
	case Tok_EXIT:
	case Tok_IF:
	case Tok_FOR:
	case Tok_ident:
	case Tok_LOOP:
	case Tok_WHILE:
	case Tok_RETURN:
	case Tok_CASE:
	case Tok_REPEAT:
		return true;
	default: return false;
	}
}

static inline bool FIRST_IfStatement(int tt) {
	return tt == Tok_IF;
}

static inline bool FIRST_ElsifStatement(int tt) {
	return tt == Tok_ELSIF;
}

static inline bool FIRST_ElseStatement(int tt) {
	return tt == Tok_ELSE;
}

static inline bool FIRST_CaseStatement(int tt) {
	return tt == Tok_CASE;
}

static inline bool FIRST_Case(int tt) {
	switch(tt){
	case Tok_hexstring:
	case Tok_NOT:
	case Tok_Tilde:
	case Tok_NIL:
	case Tok_Lbrace:
	case Tok_ident:
	case Tok_TRUE:
	case Tok_hexchar:
	case Tok_Plus:
	case Tok_integer:
	case Tok_string:
	case Tok_real:
	case Tok_FALSE:
	case Tok_Lpar:
	case Tok_Minus:
		return true;
	default: return false;
	}
}

static inline bool FIRST_LabelRange(int tt) {
	switch(tt){
	case Tok_hexstring:
	case Tok_NOT:
	case Tok_Tilde:
	case Tok_NIL:
	case Tok_Lbrace:
	case Tok_ident:
	case Tok_TRUE:
	case Tok_hexchar:
	case Tok_Plus:
	case Tok_integer:
	case Tok_string:
	case Tok_real:
	case Tok_FALSE:
	case Tok_Lpar:
	case Tok_Minus:
		return true;
	default: return false;
	}
}

static inline bool FIRST_label(int tt) {
	switch(tt){
	case Tok_hexstring:
	case Tok_NOT:
	case Tok_Tilde:
	case Tok_NIL:
	case Tok_Lbrace:
	case Tok_ident:
	case Tok_TRUE:
	case Tok_hexchar:
	case Tok_integer:
	case Tok_Plus:
	case Tok_string:
	case Tok_real:
	case Tok_FALSE:
	case Tok_Lpar:
	case Tok_Minus:
		return true;
	default: return false;
	}
}

static inline bool FIRST_WhileStatement(int tt) {
	return tt == Tok_WHILE;
}

static inline bool FIRST_RepeatStatement(int tt) {
	return tt == Tok_REPEAT;
}

static inline bool FIRST_ForStatement(int tt) {
	return tt == Tok_FOR;
}

static inline bool FIRST_LoopStatement(int tt) {
	return tt == Tok_LOOP;
}

static inline bool FIRST_ExitStatement(int tt) {
	return tt == Tok_EXIT;
}

static inline bool FIRST_procedure(int tt) {
	return tt == Tok_PROC || tt == Tok_PROCEDURE;
}

static inline bool FIRST_ProcedureType(int tt) {
	return tt == Tok_PROC || tt == Tok_PROCEDURE;
}

static inline bool FIRST_ProcedureDeclaration(int tt) {
	return tt == Tok_PROC || tt == Tok_PROCEDURE;
}

static inline bool FIRST_ProcedureHeading(int tt) {
	return tt == Tok_PROC || tt == Tok_PROCEDURE;
}

static inline bool FIRST_Receiver(int tt) {
	return tt == Tok_Lpar;
}

static inline bool FIRST_block(int tt) {
	return tt == Tok_BEGIN;
}

static inline bool FIRST_ProcedureBody(int tt) {
	switch(tt){
	case Tok_PROC:
	case Tok_BEGIN:
	case Tok_PROCEDURE:
	case Tok_CONST:
	case Tok_VAR:
	case Tok_TYPE:
		return true;
	default: return false;
	}
}

static inline bool FIRST_DeclarationSequence(int tt) {
	return tt == Tok_PROC || tt == Tok_PROCEDURE || tt == Tok_CONST || tt == Tok_VAR || tt == Tok_TYPE;
}

static inline bool FIRST_ReturnStatement(int tt) {
	return tt == Tok_RETURN;
}

static inline bool FIRST_FormalParameters(int tt) {
	return tt == Tok_Lpar;
}

static inline bool FIRST_ReturnType(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_FPSection(int tt) {
    return tt == Tok_ident || tt == Tok_CONST || tt == Tok_VAR;
}

static inline bool FIRST_FormalType(int tt) {
	switch(tt){
	case Tok_PROC:
	case Tok_RECORD:
	case Tok_HASHMAP:
	case Tok_ident:
	case Tok_ARRAY:
	case Tok_PROCEDURE:
	case Tok_Lbrack:
	case Tok_Lpar:
		return true;
	default: return false;
	}
}

static inline bool FIRST_module(int tt) {
	return tt == Tok_MODULE;
}

static inline bool FIRST_ImportList(int tt) {
	return tt == Tok_IMPORT;
}

static inline bool FIRST_import(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_MetaActuals(int tt) {
	return tt == Tok_Lpar;
}

static inline bool FIRST_MetaParams(int tt) {
	return tt == Tok_Lpar;
}

static inline bool FIRST_MetaSection(int tt) {
	return tt == Tok_ident || tt == Tok_CONST || tt == Tok_TYPE;
}

Parser2::~Parser2()
{
    if( thisMod )
        Declaration::deleteAll(thisMod);
}

void Parser2::RunParser() {
	errors.clear();
	next();
    Luon();
}

Declaration* Parser2::takeResult()
{
    Declaration* res = thisMod;
    thisMod = 0;
    return res;
}

void Parser2::next() {
	cur = la;
	la = scanner->next();
	while( la.d_type == Tok_Invalid ) {
        errors << Error(la.d_val, RowCol(la.d_lineNr, la.d_colNr), la.d_sourcePath);
		la = scanner->next();
	}
}

Token Parser2::peek(int off) {
	if( off == 1 )
		return la;
	else if( off == 0 )
		return cur;
	else
		return scanner->peek(off-1);
}

void Parser2::invalid(const char* what) {
    errors << Error(QString("invalid %1").arg(what),RowCol(la.d_lineNr, la.d_colNr), la.d_sourcePath);
}

bool Parser2::expect(int tt, bool pkw, const char* where) {
	if( la.d_type == tt) { next(); return true; }
    else { errors << Error(QString("'%1' expected in %2").arg(tokenTypeString(tt)).arg(where),
                           RowCol(la.d_lineNr, la.d_colNr), la.d_sourcePath); return false; }
}

static inline void dummy() {}

void Parser2::Luon() {
	module();
}

Expression* Parser2::number() {
    Expression* res = Expression::createFromToken(la.d_type,la.toRowCol());
    if( la.d_type == Tok_integer ) {
		expect(Tok_integer, false, "number");
        const Token tok = cur;
        QByteArray number = cur.d_val.toLower();
        number.replace('_',"");
        Type* type = 0;
        const char suffix = ( number.size() > 1 ? number[number.size()-1] : '0' );
        if( !::isdigit(suffix) )
            number.chop(1);
        switch(suffix)
        {
        case 'o':
            res->val = number.toULongLong(0,8);
            break;
        case 'b':
            res->val = number.toULongLong(0,2);
            break;
        case 'h':
            res->val = number.toULongLong(0,16);
            break;
        default:
            res->val = number.toULongLong();
            break;
        }
        if( type == 0 )
            type = mdl->getType(BasicType::INTEGER);
        if( res->val.toULongLong() > maxUlong )
            error(tok,QString("can only represent unsigned integers from 0 to %1").arg(maxUlong) );
        res->type = type;
    } else if( la.d_type == Tok_real ) {
		expect(Tok_real, false, "number");
        QByteArray str = cur.d_val;
        str.replace('_',"");
        res->type = mdl->getType(BasicType::REAL);
        res->val = str.toDouble();
    } else
		invalid("number");
    return res;
}

Qualident Parser2::qualident() {
    Qualident res;
    if( ( peek(1).d_type == Tok_ident && peek(2).d_type == Tok_Dot &&
          peek(3).d_type == Tok_ident && peek(4).d_type != Tok_Hat )  ) {
        expect(Tok_ident, false, "qualident");
        res.first = cur.d_val;
        expect(Tok_Dot, false, "qualident");
    }
    expect(Tok_ident, false, "qualident");
    res.second = cur.d_val;
    return res;
}

Parser2::IdentDef Parser2::identdef() {
    IdentDef res;
    res.visi = IdentDef::Private;
    expect(Tok_ident, false, "identdef");
    res.name = cur;
    if( la.d_type == Tok_Star || la.d_type == Tok_Minus ) {
        if( la.d_type == Tok_Star ) {
            expect(Tok_Star, false, "identdef");
            res.visi = IdentDef::Public;
        } else if( la.d_type == Tok_Minus ) {
            expect(Tok_Minus, false, "identdef");
            res.visi = IdentDef::ReadOnly;
        } else
            invalid("identdef");
    }
    return res;
}

void Parser2::ConstDeclaration() {
    const IdentDef id = identdef();
    expect(Tok_Eq, false, "ConstDeclaration");
    Declaration* d = addDecl(id, Declaration::ConstDecl);
    if( d == 0 )
        return;
    d->expr = ConstExpression();
}

Expression* Parser2::ConstExpression() {
    return expression();
}

void Parser2::TypeDeclaration() {
    const IdentDef id = identdef();
    expect(Tok_Eq, false, "TypeDeclaration");

    Type* t = 0;

    // declare the type immediately so it is known in the forthcoming declaration
    Declaration* d = addDecl(id,Declaration::TypeDecl);
    if( d == 0 )
        return;
    if( FIRST_NamedType(la.d_type) ) {
        t = NamedType();
    }else
    {
        t = type(false);
        if( t && t->decl == 0 )
        {
            t->decl = d;
            d->ownstype = true;
        }
    }
    d->type = t;
}

Type* Parser2::type(bool deanonymize) {
    Type* res = 0;
	if( FIRST_NamedType(la.d_type) ) {
        res = NamedType();
    } else if( FIRST_ArrayType(la.d_type) ) {
        res = ArrayType();
	} else if( FIRST_DictType(la.d_type) ) {
        res = DictType();
	} else if( FIRST_RecordType(la.d_type) ) {
        res = RecordType();
	} else if( FIRST_ProcedureType(la.d_type) ) {
        res = ProcedureType();
	} else if( FIRST_enumeration(la.d_type) ) {
        res = enumeration();
	} else
		invalid("type");
    if( res && res->form != BasicType::Undefined && res->form != Type::NameRef && deanonymize )
        addHelper(res);
    return res;
}

Type* Parser2::NamedType() {
    const Token t = la;
    Qualident q = qualident();
    Type* res = new Type();
    res->form = Type::NameRef;
    Declaration* helper = addHelper(res);
    helper->pos = t.toRowCol();
    helper->data = QVariant::fromValue(q);
    return res;
}

Type* Parser2::ArrayType() {
    Type* etype = 0;
    Expression* len = 0;
	if( la.d_type == Tok_ARRAY ) {
		expect(Tok_ARRAY, true, "ArrayType");
		if( FIRST_length(la.d_type) ) {
            len = length();
		}
		expect(Tok_OF, true, "ArrayType");
        etype = type();
	} else if( la.d_type == Tok_Lbrack ) {
		expect(Tok_Lbrack, false, "ArrayType");
		if( FIRST_length(la.d_type) ) {
            len = length();
		}
		expect(Tok_Rbrack, false, "ArrayType");
        etype = type();
	} else
		invalid("ArrayType");

    Type* arr = new Type();
    arr->form = Type::Array;
    arr->expr = len;
    arr->base = etype;
    return arr;
}

Expression* Parser2::length() {
    return ConstExpression();
}

Type* Parser2::DictType() {
	expect(Tok_HASHMAP, true, "DictType");
    Type* key = NamedType();
	expect(Tok_OF, true, "DictType");
    Type* etype = type();
    Type* dict = new Type();
    dict->form = Type::HashMap;
    dict->base = etype;
    dict->expr = new Expression(Expression::NameRef, key->decl->pos);
    dict->expr->val = key->decl->data;
    dict->expr->type = key;
    // is deleted via temporaries: delete key;
    return dict;
}

Type* Parser2::RecordType() {
	expect(Tok_RECORD, true, "RecordType");
    Type* rec = new Type();
    rec->form = Type::Record;
    mdl->openScope(0);
    if( la.d_type == Tok_Lpar ) {
		expect(Tok_Lpar, false, "RecordType");
        rec->base = BaseType();
		expect(Tok_Rpar, false, "RecordType");
	}
	while( FIRST_FieldList(la.d_type) ) {
		FieldList();
		if( la.d_type == Tok_Semi ) {
			expect(Tok_Semi, false, "RecordType");
		}
	}
    rec->subs = AstModel::toList(mdl->closeScope(true));
    Declaration* outer = mdl->getTopScope();
    for( int i = 0; i < rec->subs.size(); i++ )
        rec->subs[i]->outer = outer;
    expect(Tok_END, true, "RecordType");
    return rec;
}

Type* Parser2::BaseType() {
    return NamedType();
}

void Parser2::FieldList() {
    const IdentDefList l = IdentList();
    expect(Tok_Colon, false, "FieldList");
    Type* t = type();
    for(int i = 0; i < l.size(); i++ )
    {
        Declaration* d = addDecl(l[i],Declaration::Field);
        if( d == 0 )
            continue;
        d->type = t;
    }
}

Parser2::IdentDefList Parser2::IdentList() {
    IdentDefList res;
    res << identdef();
    while( la.d_type == Tok_Comma || FIRST_identdef(la.d_type) ) {
        if( la.d_type == Tok_Comma ) {
            expect(Tok_Comma, false, "IdentList");
        }
        res << identdef();
    }
    return res;
}

Type* Parser2::enumeration() {
    expect(Tok_Lpar, false, "enumeration");
    Type* res = new Type();
    res->form = Type::ConstEnum;
    if( FIRST_constEnum(la.d_type) ) {
        res->subs = constEnum(); // ConstEnum exist both in the scope list as well as the type subs
        foreach( Declaration* d, res->subs )
            d->type = res;
    } else
        invalid("enumeration");
    expect(Tok_Rpar, false, "enumeration");

    return res;
}

DeclList Parser2::constEnum() {
    expect(Tok_ident, false, "constEnum");

    DeclList res;

    Declaration* d = addDecl(cur, 0, Declaration::ConstDecl);
    if( d == 0 )
        return res;
    d->mode = Declaration::Enum;
    if( la.d_type == Tok_Eq ) {
        expect(Tok_Eq, false, "constEnum");
        d->expr = ConstExpression();
    }

    res << d;

    while( la.d_type == Tok_Comma || la.d_type == Tok_ident ) {
        if( la.d_type == Tok_Comma ) {
            expect(Tok_Comma, false, "constEnum");
        }
        expect(Tok_ident, false, "constEnum");
        d = addDecl(cur, 0, Declaration::ConstDecl);
        if( d == 0 )
            continue;
        d->mode = Declaration::Enum;
        res << d;
    }
    return res;
}

void Parser2::VariableDeclaration() {
    const IdentDefList ids = IdentList();
    expect(Tok_Colon, false, "VariableDeclaration");
    Type* t = type();
    if( t == 0 )
        return;
    Declaration* outer = mdl->getTopScope();
    foreach( const IdentDef& id, ids )
    {
        Declaration* d = addDecl(id,outer->kind == Declaration::Module ?
                                     Declaration::VarDecl : Declaration::LocalDecl);
        if( d == 0 )
            continue;
        d->outer = outer;
        d->type = t;
    }
}

// designator results in an lvalue if possible, unless needsLvalue is false
Expression* Parser2::designator(bool needsLvalue) {
    const Token t = la;
    Qualident q = qualident();
    Expression* res = new Expression(Expression::NameRef, t.toRowCol());
    // we don't know here whether quali is real, or whether it is a select of a local
    res->val = QVariant::fromValue(q);

    while( FIRST_selector(la.d_type) ) {
        // inlined selector

        if( la.d_type == Tok_Dot ) {
            expect(Tok_Dot, false, "selector");
            expect(Tok_ident, false, "selector");
            Expression* tmp = new Expression(Expression::Select, cur.toRowCol() );
            tmp->val = QVariant::fromValue(cur.d_val);
            tmp->lhs = res;
            res = tmp;
            if( la.d_type == Tok_Hat )
            {
                expect(Tok_Hat, false, "selector");
                tmp = new Expression(Expression::Super, cur.toRowCol() );
                tmp->lhs = res;
                res = tmp;
            }
        } else if( la.d_type == Tok_Lbrack ) {
            expect(Tok_Lbrack, false, "selector");
            Expression* tmp = new Expression(Expression::Index, cur.toRowCol() );
            tmp->lhs = res;
            res = tmp;
            res->rhs = expression();
            if( res->rhs == 0 )
            {
                delete res;
                return 0;
            }
            expect(Tok_Rbrack, false, "selector");
        } else if( la.d_type == Tok_Lpar ) {
            expect(Tok_Lpar, false, "selector");
            const Token lpar = cur;
            Expression* args = 0;
            if( FIRST_expression(la.d_type) ) {
                // inlined ExpList
                args = expression(true);
                if( args == 0 )
                {
                    delete res;
                    return 0;
                }
                while( la.d_type == Tok_Comma || FIRST_expression(la.d_type) ) {
                    if( la.d_type == Tok_Comma )
                        expect(Tok_Comma, false, "ExpList");
                    Expression* arg = expression(true);
                    if( arg == 0 )
                    {
                        delete res;
                        return 0;
                    }
                    Expression::append(args,arg);
                }
            }
            expect(Tok_Rpar, false, "selector");

            Expression* tmp = new Expression(Expression::Call, lpar.toRowCol() ); // could be call or typecast at this point
            tmp->lhs = res; // proc
            tmp->rhs = args;
            res = tmp;
        } else
            invalid("selector");
    }

    res->needsLval = needsLvalue;
    return res;
}

Expression* Parser2::expression(bool lvalue) {
    Expression* res = SimpleExpression(lvalue);
    if( res == 0 )
        return 0;
    if( FIRST_relation(la.d_type) ) {
        const Token tok = la;
        Expression* tmp = Expression::createFromToken(relation(), tok.toRowCol());
        tmp->lhs = res;
        tmp->type = mdl->getType(BasicType::BOOLEAN);
        res = tmp;
        res->rhs = SimpleExpression(false);
        if( res->rhs == 0 )
        {
            delete tmp;
            return 0;
        }
    }
    return res;
}

quint8 Parser2::relation() {
	if( la.d_type == Tok_Eq ) {
		expect(Tok_Eq, false, "relation");
	} else if( la.d_type == Tok_Hash ) {
		expect(Tok_Hash, false, "relation");
	} else if( la.d_type == Tok_Lt ) {
		expect(Tok_Lt, false, "relation");
	} else if( la.d_type == Tok_Leq ) {
		expect(Tok_Leq, false, "relation");
	} else if( la.d_type == Tok_Gt ) {
		expect(Tok_Gt, false, "relation");
	} else if( la.d_type == Tok_Geq ) {
		expect(Tok_Geq, false, "relation");
	} else if( la.d_type == Tok_IN ) {
		expect(Tok_IN, false, "relation");
	} else if( la.d_type == Tok_IS ) {
		expect(Tok_IS, true, "relation");
	} else
		invalid("relation");
    return cur.d_type;
}
